Fixing the mobile layout overflow issue once and for all (previously hindered by a too-specific selector that worked in dev environment but broke in production)

--- a/sass/custom/portfolio/the-hechinger-report.scss
+++ b/sass/custom/portfolio/the-hechinger-report.scss
@@ -28,7 +28,9 @@
 
 // =============================================
 
-body.the-hechinger-report {
+// Keeps homepage graphic from spilling out
+// on mobile and breaking the layout
+body {
 	overflow: hidden;
 }
 
